--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,16 @@
     <string name="title_activity_cm_calendar">CmCalendarActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- カレンダー機能用 -->
+    <string name="arg_display_date">arg_display_date</string>
+    <!-- 曜日 -->
+    <string name="sunday">日</string>
+    <string name="monday">月</string>
+    <string name="tuesday">火</string>
+    <string name="wednesday">水</string>
+    <string name="thursday">木</string>
+    <string name="friday">金</string>
+    <string name="saturday">土</string>
     <!-- Realm -->
     <string name="realm_instance">CalMemo.realm</string>
 </resources>
