--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- カレンダー機能用 -->
-    <string name="arg_display_date">arg_display_date</string>
+    <string name="arg_display_year">argDisplayYear</string>
+    <string name="arg_display_month">argDisplayMonth</string>
     <!-- 曜日 -->
     <string name="sunday">日</string>
     <string name="monday">月</string>
