--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="title_activity_cm_calendar">CmCalendarActivity</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- 画面タイトル -->
+    <string name="cm_calendar_title">カレンダー</string>
     <!-- カレンダー機能用 -->
     <string name="arg_display_year">argDisplayYear</string>
     <string name="arg_display_month">argDisplayMonth</string>
